# htmx-design-system-poc

./: .gitignore  PLAN.md  README.md  app.py  biome.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  wrangler.toml
.github/workflows/: deploy-cloudflare.yaml
components/atoms/: button.html  input.html  label.html  text.html
components/molecules/: card.html  form-group.html
components/organisms/: loading-indicator.html  modal.html  navbar.html
docs/: architecture.md  best-practices.md  component-guide.md
scripts/: build-assets.ts
src/: app.ts  data.ts  index.tsx  server.ts  styles.css  styles.ts  templates.tsx
static/css/: app.css
static/src/: tokens.css
templates/: atoms.html  base.html  catalog.html  index.html  molecules.html  organisms.html  use-cases.html
templates/catalog/components/: atoms-button.html  atoms-input.html  atoms-label.html  atoms-text.html  molecules-card.html  molecules-form-group.html  organisms-loading-indicator.html  organisms-modal.html  organisms-navbar.html
templates/use_cases/partials/: error_message.html  feedback_response.html  task_detail.html  task_panel.html
